# python-template

./: .actrc  .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: python_package.mdc
.github/workflows/: python-ci.yml
src/mypackage/: __init__.py  core.py
src/pubkit/: __init__.py  core.py
tests/: test_core.py
