[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pubkit"
version = "0.1.0"
description = "A toolkit for publishing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    # { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "uv>=0.6.9",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 88 

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
